<resources>
    <string name="app_name">BoxItTimer</string>
    <string name="round">Round %d of %d</string>
    <string name="welcome_msg"> Welcome to BoxItTimer</string>
    <string name="fight_time">Set your fight time</string>
    <string name="rest_time">Set your rest time</string>
    <string name="prep_time">Set number of rounds</string>
    <string name="start">Start</string>
    <string name="get_ready">Get Ready!</string>
    <string name="fight">Fight!</string>
    <string name="rest">Rest!</string>
    <string name="time_paused">Time paused…</string>
    <string name="finish">Finished!!!</string>
    <string name="play_btn">Start fight time</string>
    <string name="pause_btn">Pause fight time</string>
    <string name="stop_btn">Stop fight time</string>

</resources>
